--- a/index.html
+++ b/index.html
@@ -87,7 +87,6 @@
             <!-- Причины выбрать нас -->
             <section class="reasons">
                 <h3 class="reasons__title">5 причин выбрать нас</h3>
-                <img class="reasons__img" src="images/reason_5.webp" alt="time" width="200" height="150">
                 <ul class="reasons__list">
                     <li class="reasons__list-item">
                         <a href="#" class="reasons__list-link">1</a>
@@ -103,11 +102,14 @@
                     </li>
                     <li class="reasons__list-item">
                         <a href="#" class="reasons__list-link">5</a>
-                        <h4 class="reasons__text">Оперативность в работе</h4>
-                        <p class="reasons__description">Мы прекрасно понимаем, что время — деньги. 
-                            Наши сотрудники всегда доступны для оперативного решения вопросов.</p>
                     </li>
                 </ul>
+                <div class="reasons__details">
+                    <img class="reasons__img" src="images/reason_5.webp" alt="time" width="200" height="150">
+                    <h4 class="reasons__text">Оперативность в работе</h4>
+                    <p class="reasons__description">Мы прекрасно понимаем, что время — деньги. 
+                        Наши сотрудники всегда доступны для оперативного решения вопросов.</p>
+                </div>
             </section>
             <!-- Описание -->
             <section class="description">
