--- a/index.html
+++ b/index.html
@@ -179,5 +179,7 @@
             # Проект:
             BABYLON Translation Agency - сайт бюро переводов.</p>
     </footer>
+
+    <script src="js/script.js"></script>
 </body>
 </html>
