--- a/index.html
+++ b/index.html
@@ -41,14 +41,14 @@
         <!-- header Navigation Menu -->
         <nav class="header__menu">
             <ul class="menu">
-                <li class="menu__item menu__item--active"><a href="#" class="menu__link">Об агентстве</a></li>
+                <!-- <li class="menu__item menu__item--active"><a href="#" class="menu__link">Об агентстве</a></li>
                 <li class="menu__item"><a href="#" class="menu__link">Услуги</a></li>
                 <li class="menu__item"><a href="#" class="menu__link">Цены</a></li>
                 <li class="menu__item"><a href="#" class="menu__link">Компаниям</a></li>
                 <li class="menu__item"><a href="#" class="menu__link">Частным лицам</a></li>
                 <li class="menu__item"><a href="#" class="menu__link">Доставка</a></li>
                 <li class="menu__item"><a href="#" class="menu__link">Акции</a></li>
-                <li class="menu__item"><a href="#" class="menu__link">Контакты</a></li>
+                <li class="menu__item"><a href="#" class="menu__link">Контакты</a></li> -->
             </ul>
         </nav>
     </header>
