--- a/index.html
+++ b/index.html
@@ -3,11 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BABYLON</title>
+    <title img src='images/LOGO_no_bg.png'>BABYLON</title>
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
+    <!-- HTML: предзагрузчик -->
+    <div id="preloader">
+    <div class="spinner"></div>
+    </div>
     <!-- Special Offer Banner -->
     <div class="special-offer-banner">
         <p class="special-offer-banner__text">SPECIAL OFFER - СКИДКА НА ПЕРВЫЙ ЗАКАЗ</p>
@@ -164,6 +168,12 @@
                     </div>
                 </div>
             </section>
+            <section class="job">
+                <h2 class="job__title">Вакансии</h2>
+                <ul class="job__list">
+                    <!-- json -->
+                </ul>
+            </section>
         </main>
     </div>
 
@@ -196,7 +206,6 @@
         </form>
     </section>
 </div>
-
     <script src="js/script.js"></script>
 </body>
 </html>
