автоматическое переключение reasons__details

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                     </li>
                 </ul>
                 <div class="reasons__details">
-                    
+                    <!-- Слайды будут добавляться сюда через JS -->
                 </div>
             </section>
             <!-- Описание -->
